# Yatrik

./: database.py  main.py  models.py  pyproject.toml  schemas.py
auth/: config.py  hash.py  jwt.py  oauth2.py
data/: recommendation_dataset.csv  trek_routes.py
ml/: feature_encoders.pkl  predict.py  recommender_model.pkl  target_encoder.pkl  train.py
routers/: auth.py  dashboard.py  destinations.py  itinerary.py  recommend.py  saved.py  users.py
seed/: seed.py
seed_data/: destinations.json
utils/: budget.py  cache.py  recommendation.py
yatrik-frontend/: index.html  package-lock.json  package.json
yatrik-frontend/src/: App.jsx
yatrik-frontend/src/api/: destinationsApi.js  homeApi.js  savedApi.js
yatrik-frontend/src/components/: DestinationCard.jsx  DestinationFilter.jsx  Navbar.jsx
yatrik-frontend/src/context/: AuthContext.jsx
yatrik-frontend/src/layouts/: AuthLayout.jsx
yatrik-frontend/src/pages/: Dashboard.jsx  DestinationDetail.jsx  ExploreDestinations.jsx  Home.jsx  Itinerary.jsx  Login.jsx  Register.jsx  SavedTrips.jsx
yatrik-frontend/src/styles/: explore.css  home.css  itinerary.css
