[project]
name = "yatrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
