[project]
name = "yatrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
